correcao de texto

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </main>
 
     <footer>
-        Site criado por <a href="https://github.com/gustavoguanabara/gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo">Curso em Video</a>.
+        Site criado por <a href="https://www.linkedin.com/in/rafael-calixta-047344234/" target="_blank">Rafael Calixta</a> para o curso de HTML5 e CSS3 do Professor <a href="https://www.youtube.com/cursoemvideo" target="_blank">Gustavo Guanabara</a>.
     </footer>
 
     <script src="js/scripts.js"></script>
